<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.5</version>
        <relativePath/>
    </parent>

    <groupId>com.app.publish</groupId>
    <artifactId>app-publish-service</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>app-publish-service</name>
    <description>Multi-store app publishing orchestration service</description>

    <properties>
        <java.version>17</java.version>
        <env.name>dev</env.name>
        <dist.dir>${project.build.directory}/app_publish</dist.dir>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.6.0</version>
        </dependency>
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
            <version>3.5.7</version>
        </dependency>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.oceanbase</groupId>
            <artifactId>oceanbase-client</artifactId>
            <version>2.4.17</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <finalName>${project.artifactId}-${project.version}-${env.name}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>doc</directory>
                <targetPath>static</targetPath>
                <filtering>false</filtering>
                <includes>
                    <include>openapi.yaml</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <delimiters>
                        <delimiter>@</delimiter>
                    </delimiters>
                    <useDefaultDelimiters>false</useDefaultDelimiters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>build-app-publish-layout</id>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <delete dir="${dist.dir}"/>
                                <delete file="${project.build.directory}/app_publish-${env.name}.zip"/>
                                <mkdir dir="${dist.dir}"/>
                                <mkdir dir="${dist.dir}/log"/>
                                <mkdir dir="${dist.dir}/script"/>
                                <mkdir dir="${dist.dir}/script/run"/>
                                <copy file="${project.build.directory}/${project.build.finalName}.jar"
                                      todir="${dist.dir}"/>
                                <copy file="${project.basedir}/script/windows/start.bat"
                                      tofile="${dist.dir}/script/start.bat"/>
                                <copy file="${project.basedir}/script/windows/stop.bat"
                                      tofile="${dist.dir}/script/stop.bat"/>
                                <copy file="${project.basedir}/script/linux/start.sh"
                                      tofile="${dist.dir}/script/start.sh"/>
                                <copy file="${project.basedir}/script/linux/stop.sh"
                                      tofile="${dist.dir}/script/stop.sh"/>
                                <zip destfile="${project.build.directory}/app_publish-${env.name}.zip"
                                     basedir="${dist.dir}"/>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <env.name>dev</env.name>
            </properties>
        </profile>
        <profile>
            <id>sit</id>
            <properties>
                <env.name>sit</env.name>
            </properties>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <env.name>prod</env.name>
            </properties>
        </profile>
    </profiles>
</project>
